added all elements to the private page

--- a/app/assets/stylesheets/pages/_live_piano_karaoke.scss
+++ b/app/assets/stylesheets/pages/_live_piano_karaoke.scss
@@ -1,5 +1,5 @@
 .banner-image-live-piano {
-  background-image: url("live_piano_karaoke/8.jpg");
+  background-image: url("karaoke/8.jpg");
   background-position: center center;
 }
 
