--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -1,6 +1,6 @@
 
 .banner-image-find-us {
-  background-image: url("live_piano_karaoke/8.jpg");
+  background-image: url("karaoke/8.jpg");
   background-position: center center;
 }
 
