--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,7 +44,7 @@
     <div class="carousel-inner" data-controller="multiple-images">
       <div class="carousel-item active" data-multiple-images-target="card1">
         <div class="card category-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to venues_path do %>
+          <%= link_to pubs_path do %>
           <%= image_tag("landing_page/quizzing_section/2.jpg", class: "card-img", alt: "Card image") %>
           <div class="card-img-overlay category-card-image">
             <h4 class="card-title font-weight-bold">PUBS</h4>
