added all elements to pubs page - added links

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,7 +1,7 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
+$red: #FF000D;
 $blue: #0D6EFD;
 $yellow: #FFD800;
 $orange: #F4631E;
