--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -27,7 +27,7 @@
 
 <hr class="dividing-line-black">
 
-<div class="container d-flex justify-content-start">
+<div class="container d-flex justify-content-start", id="our-team">
   <h2>OUR TEAM</h1>
 </div>
 
