--- a/app/views/pages/charity.html.erb
+++ b/app/views/pages/charity.html.erb
@@ -32,7 +32,7 @@
 <hr class="dividing-line-black">
 
 <div class="d-flex justify-content-center">
-  <%= link_to "contact us", contact_us_path %>
+  <%= link_to "Contact Us", contact_us_path %>
 </div>
 
 <div class="empty-space-responsive"></div>
