--- a/app/views/pages/corporate.html.erb
+++ b/app/views/pages/corporate.html.erb
@@ -54,9 +54,9 @@
 
 <div class="container">
   <div class="row align-items-center justify-content-evenly">
-    <div class="shauna-card col-4 col-md-3 col-lg-2">
+    <div class="testimonial-card col-4 col-md-3 col-lg-2">
       <%= image_tag("quizmasters/1.jpg", alt: "Picture of Shuana Thompson from Multiplex ", class: "shuana-pic") %>
-      <div class="shauna-title-section">
+      <div class="testimonial-title-section testimonial-title-peach">
         <h4> MULTIPLEX </h4>
         <p class="text-center">Shauna Thompson</p>
       </div>
