--- a/app/assets/stylesheets/pages/_contact_us.scss
+++ b/app/assets/stylesheets/pages/_contact_us.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: end;
 }
 
 .title-contact-us {
@@ -14,6 +15,7 @@
 .contact-us-logo {
   max-width: 30%;
   height: auto;
+  margin-bottom: 1rem;
 }
 
 .form-container {
