moved edit and delete button for quizmaster to show page

--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -31,8 +31,8 @@
   <h2>OUR TEAM</h1>
 </div>
 
-<div class="container-fluid row justify-content-center">
-   <%= render partial: 'quizmasters/quizmaster', collection: @quizmasters, locals: { admin_page: false } %>
+<div class="container row justify-content-center mx-auto">
+  <%= render partial: 'quizmasters/quizmaster', collection: @quizmasters, locals: { admin_page: false } %>
 </div>
 
 <hr class="dividing-line-black">
