--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -40,3 +40,14 @@
   background-color: $dog-red;
   font-weight: bold;
 }
+
+.dog-button-yellow {
+  border-radius: 10px;
+  background-color: $yellow;
+  border: 0;
+}
+
+.dog-button-red {
+  border-radius: 10px;
+  background-color: $red;
+}
