--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -62,6 +62,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   column-gap: 3rem;
   flex-grow: 1;
+  justify-content: center;
 }
 
 // Smallest device
