changed links on front page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,12 +21,12 @@
           <h5 class="btn-red">FIND A QUIZ</h5>
         </div>
       <% end %>
-      <%= link_to start_a_quiz_path do %>
+      <%= link_to pubs_path do %>
         <div class="col-md-12 col-sm-12 d-flex justify-content-center">
           <h5 class="btn-red">START A QUIZ!</h5>
         </div>
       <% end %>
-      <%= link_to host_your_own_path do %>
+      <%= link_to private_path do %>
         <div class="col-md-12 col-sm-12 d-flex justify-content-center">
           <h5 class="btn-red">HOST YOUR OWN</h5>
         </div>
