--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -239,7 +239,15 @@
 
 // CONTACT US
 
+.contact-us-link {
+  color: inherit;
+
+  &:hover {
+    color: inherit;
+  }
+}
+
 .social-media-img {
-  width: 3rem;
+  width: 4rem;
   border-radius: 50%;
 }
