--- a/app/views/pages/pubs.html.erb
+++ b/app/views/pages/pubs.html.erb
@@ -47,7 +47,7 @@
 
 <div class="dividing-line-black"></div>
 
-<div class="container join-pack-container">
+<div class="container join-pack-container" id="join-us-at-your-pub">
   <h3>JOIN THE QUIZ DOG PACK AT YOUR PUB!</h3>
   <div class="text-bubble text-bubble-yellow">
     <p>
@@ -89,7 +89,7 @@
 
 <div class="dividing-line-black"></div>
 
-<div class="container access-quizdex-section">
+<div class="container access-quizdex-section" id="host-your-own">
   <h3>HOST YOUR OWN - ACCESS QUIZDEX</h3>
   <div class="text-bubble text-bubble-yellow">
     <p>
