--- a/app/views/pages/corporate.html.erb
+++ b/app/views/pages/corporate.html.erb
@@ -32,22 +32,41 @@
   <h3>WHO WE HAVE HOSTED FOR</h3>
 </div>
 
-<div class="company-logos-container">
-  <%= image_tag "corporate/company_logos/8.jpg", class: "company-logo", alt: "Skin + Me logo" %>
-  <%= image_tag "corporate/company_logos/9.jpg", class: "company-logo", alt: "CBRE logo" %>
-  <%= image_tag "corporate/company_logos/10.jpg", class: "company-logo", alt: "Wagamama logo" %>
-  <%= image_tag "corporate/company_logos/11.jpg", class: "company-logo", alt: "Norges Bank logo" %>
-  <%= image_tag "corporate/company_logos/12.jpg", class: "company-logo", alt: "The Independent logo" %>
-  <%= image_tag "corporate/company_logos/13.jpg", class: "company-logo", alt: "Multiplex logo" %>
-  <%= image_tag "corporate/company_logos/14.jpg", class: "company-logo", alt: "Napster logo" %>
-  <%= image_tag "corporate/company_logos/15.jpg", class: "company-logo", alt: "AON logo" %>
-  <%= image_tag "corporate/company_logos/16.jpg", class: "company-logo logo-paribas", alt: "BNP Paribas logo" %>
-  <%= image_tag "corporate/company_logos/17.jpg", class: "company-logo", alt: "AM Trust logo" %>
-  <%= image_tag "corporate/company_logos/18.jpg", class: "company-logo", alt: "VeraCross logo" %>
-  <%= image_tag "corporate/company_logos/19.jpg", class: "company-logo", alt: "NHS logo" %>
-  <%= image_tag "corporate/company_logos/20.jpg", class: "company-logo", alt: "Good Law Project logo" %>
-  <%= image_tag "corporate/company_logos/21.jpg", class: "company-logo", alt: "Trivial Pursuit logo" %>
-  <%= image_tag "corporate/company_logos/22.jpg", class: "company-logo", alt: "Nintendo logo" %>
+<div class="logos">
+  <div class="logos-slide">
+    <%= image_tag "corporate/company_logos/8.jpg", class: "company-logo", alt: "Skin + Me logo" %>
+    <%= image_tag "corporate/company_logos/9.jpg", class: "company-logo", alt: "CBRE logo" %>
+    <%= image_tag "corporate/company_logos/10.jpg", class: "company-logo", alt: "Wagamama logo" %>
+    <%= image_tag "corporate/company_logos/15.jpg", class: "company-logo", alt: "AON logo" %>
+    <%= image_tag "corporate/company_logos/11.jpg", class: "company-logo", alt: "Norges Bank logo" %>
+    <%= image_tag "corporate/company_logos/17.jpg", class: "company-logo", alt: "AM Trust logo" %>
+    <%= image_tag "corporate/company_logos/12.jpg", class: "company-logo", alt: "The Independent logo" %>
+    <%= image_tag "corporate/company_logos/20.jpg", class: "company-logo", alt: "Good Law Project logo" %>
+    <%= image_tag "corporate/company_logos/13.jpg", class: "company-logo", alt: "Multiplex logo" %>
+    <%= image_tag "corporate/company_logos/14.jpg", class: "company-logo", alt: "Napster logo" %>
+    <%= image_tag "corporate/company_logos/16.jpg", class: "company-logo logo-paribas", alt: "BNP Paribas logo" %>
+    <%= image_tag "corporate/company_logos/19.jpg", class: "company-logo", alt: "NHS logo" %>
+    <%= image_tag "corporate/company_logos/18.jpg", class: "company-logo", alt: "VeraCross logo" %>
+    <%= image_tag "corporate/company_logos/21.jpg", class: "company-logo", alt: "Trivial Pursuit logo" %>
+    <%= image_tag "corporate/company_logos/22.jpg", class: "company-logo", alt: "Nintendo logo" %>
+  </div>
+  <div class="logos-slide">
+    <%= image_tag "corporate/company_logos/8.jpg", class: "company-logo", alt: "Skin + Me logo" %>
+    <%= image_tag "corporate/company_logos/9.jpg", class: "company-logo", alt: "CBRE logo" %>
+    <%= image_tag "corporate/company_logos/10.jpg", class: "company-logo", alt: "Wagamama logo" %>
+    <%= image_tag "corporate/company_logos/15.jpg", class: "company-logo", alt: "AON logo" %>
+    <%= image_tag "corporate/company_logos/11.jpg", class: "company-logo", alt: "Norges Bank logo" %>
+    <%= image_tag "corporate/company_logos/17.jpg", class: "company-logo", alt: "AM Trust logo" %>
+    <%= image_tag "corporate/company_logos/12.jpg", class: "company-logo", alt: "The Independent logo" %>
+    <%= image_tag "corporate/company_logos/20.jpg", class: "company-logo", alt: "Good Law Project logo" %>
+    <%= image_tag "corporate/company_logos/13.jpg", class: "company-logo", alt: "Multiplex logo" %>
+    <%= image_tag "corporate/company_logos/14.jpg", class: "company-logo", alt: "Napster logo" %>
+    <%= image_tag "corporate/company_logos/16.jpg", class: "company-logo logo-paribas", alt: "BNP Paribas logo" %>
+    <%= image_tag "corporate/company_logos/19.jpg", class: "company-logo", alt: "NHS logo" %>
+    <%= image_tag "corporate/company_logos/18.jpg", class: "company-logo", alt: "VeraCross logo" %>
+    <%= image_tag "corporate/company_logos/21.jpg", class: "company-logo", alt: "Trivial Pursuit logo" %>
+    <%= image_tag "corporate/company_logos/22.jpg", class: "company-logo", alt: "Nintendo logo" %>
+  </div>
 </div>
 
 <div class="empty-space-responsive"></div>
