August changes Changed social media images Added two images to pubs page with transparent background and set them to overlap

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -174,26 +174,78 @@
 // Makes controls pop more
 .carousel-control-prev, .carousel-control-next {
   opacity: 1;
+  width: 10%;
+}
+
+.custom-carousel-control .carousel-control-prev-icon,
+.custom-carousel-control .carousel-control-next-icon {
+  width: 30px; /* Adjust size as needed */
+  height: 30px; /* Adjust size as needed */
+}
+
+.yellow-carousel-control .carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23FFD800' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.yellow-carousel-control .carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23FFD800' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
+
+.orange-carousel-control .carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23F4631E' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.orange-carousel-control .carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23F4631E' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
+
+
+.peach-carousel-control .carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ff7b60' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.peach-carousel-control .carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ff7b60' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
 }
 
 // Changes position of carousel controls depending on screen size so that position on card is consistent
 .carousel-control-prev {
+  left: 0.5rem;
+
   @include media(tablet) {
-    left: -2.5rem;
+    left: 0rem;
   }
 
   @include media(laptop) {
-    left: 1.5rem;
+    left: -1rem;
+  }
+
+  @include media(desktop) {
+    left: 2.5rem;
+  }
+
+  @include media(large-desktop) {
+    left: 6rem;
   }
 }
 
 .carousel-control-next {
+  right: 0.5rem;
+
   @include media(tablet) {
-    right: -2.5rem;
+    right: 0rem;
   }
 
   @include media(laptop) {
-    right: 1.5rem;
+    right: -1rem;
+  }
+
+  @include media(desktop) {
+    right: 2.5rem;
+  }
+
+  @include media(large-desktop) {
+    right: 6rem;
   }
 }
 
@@ -202,7 +254,10 @@
 
 #karaoke-categories-carousel .carousel-inner .carousel-item.active,
 #karaoke-categories-carousel .carousel-inner .carousel-item-next,
-#karaoke-categories-carousel .carousel-inner .carousel-item-prev {
+#karaoke-categories-carousel .carousel-inner .carousel-item-prev,
+#about-categories-carousel .carousel-inner .carousel-item.active,
+#about-categories-carousel .carousel-inner .carousel-item-next,
+#about-categories-carousel .carousel-inner .carousel-item-prev {
   display: flex;
   justify-content: center;
 }
@@ -231,7 +286,8 @@
     justify-content: space-around;
   }
 
-  #karaoke-categories-carousel .carousel-control-prev, #karaoke-categories-carousel .carousel-control-next {
+  #karaoke-categories-carousel .carousel-control-prev, #karaoke-categories-carousel .carousel-control-next,
+  #about-categories-carousel .carousel-control-prev, #about-categories-carousel .carousel-control-next {
     display: none;
   }
 }
@@ -248,6 +304,5 @@
 }
 
 .social-media-img {
-  width: 4rem;
-  border-radius: 50%;
+  width: 6rem;
 }
