--- a/app/assets/stylesheets/layouts/_basics.scss
+++ b/app/assets/stylesheets/layouts/_basics.scss
@@ -1,10 +1,12 @@
 a {
   text-decoration: none;
+  color: $dog-text;
 }
 
 p {
   margin-bottom: 0;
   text-align: left;
+  color: $dog-text;
 }
 
 .container {
