--- a/app/assets/stylesheets/pages/_charity.scss
+++ b/app/assets/stylesheets/pages/_charity.scss
@@ -13,6 +13,16 @@
   border-radius: 10px;
 }
 
-.lightbulb-logo {
+.lightbulb-logo-charity {
   object-fit: cover;
+  margin-top: -2rem;
+
+  @include media(mobile) {
+    margin-top: -3rem;
+  }
+
+  @include media(mobile) {
+    margin-top: -4rem;
+  }
+
 }
