--- a/app/views/pages/private.html.erb
+++ b/app/views/pages/private.html.erb
@@ -5,11 +5,14 @@
 </div>
 
 <div class="container">
-  <div class="d-flex justify-content-center">
+  <div class="d-flex justify-content-between">
     <h3>FOR ALL YOU PARTY ANIMALS</h3>
+     <div class="lighbulb-image-private-container">
+      <%= image_tag "private/lightbulb-orange.png", class: "img-fluid lightbulb-image-private" %>
+    </div>
   </div>
   <div class="d-flex">
-    <div class="text-bubble text-bubble-yellow col-9 col-md-8 col-lg-8">
+    <div class="text-bubble text-bubble-yellow">
       <p>
         Looking to throw a party and need the perfect ice breaker to get things going?
         There’s nothing like a fantastic quiz to get things really cooking!
@@ -25,17 +28,14 @@
         Contact us for rates and further details.
       </p>
     </div>
-    <div class="col-3 col-md-4 col-lg-4">
-      <%= image_tag "private/private_lightbulb.jpg", class: "img-fluid" %>
-    </div>
   </div>
 </div>
 
 <hr class="dividing-line-black">
 
 <div class="container private-virtual">
+  <h3>VIRTUAL</h3>
   <div class="text-bubble text-bubble-yellow">
-    <h3>VIRTUAL</h3>
     <p>
       Just because your mates are spread across the world is absolutely no reason why
       you can’t enjoy a good quiz. We have hosted huge events of well over a 200
