--- a/app/views/pages/pubs.html.erb
+++ b/app/views/pages/pubs.html.erb
@@ -137,9 +137,8 @@
 <div class="d-flex justify-content-center">
   <%= link_to "Contact Us", contact_us_path %>
 </div>
-
-<div class="col-3 col-md-4 col-lg-4">
-  <%= image_tag "private/private_lightbulb.jpg", class: "img-fluid d-none" %>
+<div class="lightbulb-container">
+  <%= image_tag "pubs/7.png", class: "lightbulb-image" %>
 </div>
 
 <div class="empty-space-responsive"></div>
