--- a/app/assets/stylesheets/pages/_corporate.scss
+++ b/app/assets/stylesheets/pages/_corporate.scss
@@ -20,13 +20,13 @@
 }
 
 .logos {
+  overflow:hidden;
   white-space: nowrap;
-  background-color: white;
-
 }
 
 .logos-slide {
   animation: 40s slide infinite linear;
+  width: auto;
   display: inline-block;
 
   img {
@@ -122,6 +122,10 @@
 .corporate-virtual-img {
   width: 100%;
   object-fit: cover;
-  margin-top: -1rem;
+  margin-top: -2rem;
   z-index: 0;
+
+  @include media(mobile) {
+    margin-top: -4rem;
+  }
 }
