--- a/app/assets/stylesheets/pages/_pubs.scss
+++ b/app/assets/stylesheets/pages/_pubs.scss
@@ -108,3 +108,46 @@
 .testimonial-title-red {
   background-color: $red;
 }
+
+.lightbulb-container {
+  display: flex;
+  justify-content: right;
+  margin-top: -7rem;
+
+  @include media(tablet) {
+    margin-right: 3rem;
+  }
+
+  @include media(laptop) {
+    margin-right: 6rem;
+    margin-top: -10rem;
+  }
+
+  @include media(laptop) {
+    margin-right: 6rem;
+    margin-top: -8rem;
+  }
+
+  @include media(large-desktop) {
+    margin-right: 12rem;
+    margin-top: -14rem;
+  }
+
+  @include media(extra-large-desktop) {
+    margin-right: 15rem;
+    margin-top: -14rem;
+  }
+
+}
+
+.lightbulb-image {
+  max-width: 130px;
+
+  @include media(tablet) {
+    max-width: 200px;
+  }
+
+  @include media(laptop) {
+    max-width: 300px;
+  }
+ }
