--- a/app/assets/stylesheets/pages/_sustainability.scss
+++ b/app/assets/stylesheets/pages/_sustainability.scss
@@ -22,14 +22,16 @@
 
 
 .ecologi-logo {
-  width: 100%;
-  margin-left: 0rem;
-  margin-top: 0rem;
-  border-radius: 50%;
+  width: 170%;
+  margin-left: -2.5rem;
 
-  @include media(mobile) {
-    width: 140%;
-    margin-left: -2rem;
-    margin-top: 2rem;
+  @include media(tablet) {
+    margin-top: -2rem;
+    margin-left: -1.5rem;
+  }
+
+  @include media(laptop) {
+    width: 100%;
+    margin-top: -2rem;
   }
 }
