--- a/app/views/pages/charity.html.erb
+++ b/app/views/pages/charity.html.erb
@@ -21,11 +21,11 @@
     <h3>WE SUPPORT</h3>
   </div>
   <div class="col-12 col-md-8 col-lg-8 mx-auto d-flex justify-content-evenly">
-    <%= image_tag "charity/24.jpg", class: "charity-logo", alt: "St Giles logo" %>
-    <%= image_tag "charity/25.jpg", class: "charity-logo", alt: "Macmillan logo" %>
+    <%= image_tag "charity/24.png", class: "charity-logo", alt: "St Giles logo" %>
+    <%= image_tag "charity/25.png", class: "charity-logo", alt: "Macmillan logo" %>
   </div>
-  <div class="col-4 mx-auto">
-    <%= image_tag "charity/charity_lightbulb.jpg", class: "lightbulb-logo img-fluid", alt: "a lightbulb" %>
+  <div class="col-4 mx-auto d-flex justify-content-center">
+    <%= image_tag "pubs/7.png", class: "lightbulb-logo-charity img-fluid", alt: "a lightbulb" %>
   </div>
 </div>
 
