--- a/app/views/pages/corporate_karaoke.html.erb
+++ b/app/views/pages/corporate_karaoke.html.erb
@@ -4,12 +4,12 @@
   </div>
 </div>
 
-<div class="container d-flex justify-content-center">
+<div class="container d-flex justify-content-left">
   <h1>HOWL THE NIGHT AWAY</h1>
 </div>
 
-<div class="container">
-  <div class="text-bubble text-bubble-orange">
+<div class="container d-flex">
+  <div class="text-bubble text-bubble-orange col-9">
     <p>
       It’s time to become a star! Quiz Dog is far from a one-trick puppy. Make it a work function/private party to remember
       with our fully trained hosts (each one of them a consummate show-off)!
@@ -18,6 +18,9 @@
     <p>
       Dancing Queen? Sweet Caroline? Anarchy in the UK? There isn’t a song we can’t provide, so start your vocal exercises, get a bit of Dutch courage, and sing the night away.
     </p>
+  </div>
+  <div class="singing-mouth-container col-3">
+    <%= image_tag "karaoke/26.png", class: "img-fluid singing-mouth" %>
   </div>
 </div>
 
