--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -32,7 +32,7 @@
 
 <div class="container justify-content-center">
   <div class="row">
-    <div class="col-8">
+    <div class="col-9 col-md-8">
       <div class="text-bubble text-bubble-peach">
         <p>
           One of the ways in which we are doing our bit for mother earth
@@ -43,8 +43,8 @@
         </p>
       </div>
     </div>
-    <div class="col-4">
-      <%= image_tag("sustainability/ecologi_logo.jpg", alt: "ecologi logo", class: "ecologi-logo") %>
+    <div class="col-3 col-md-4">
+      <%= image_tag("sustainability/27.png", alt: "ecologi logo", class: "ecologi-logo") %>
     </div>
   </div>
 </div>
