--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,6 +12,7 @@
         <%= link_to "Karaoke", root_path(anchor: 'karaoke-section'), class: "dropdown-item" %>
         <%= link_to "Who we are", root_path(anchor: 'who-we-are-section'), class: "dropdown-item" %>
         <%= link_to "Access Quizdex", "#{root_path}#contact-section", class: "dropdown-item" %>
+        <%= link_to "Contact Us", contact_us_path, class: "dropdown-item" %>
       </div>
   </div>
 </div>
